force-app/main/default/objects/Declaration__c/Declaration__c.object-meta.xml
<CustomObject>
    <label>Declaration</label>
    <nameField>
        <label>Declaration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>