force-app/main/default/objects/Declaration__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Declarations</relationshipLabel>
    <relationshipName>Application_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>