force-app/main/default/objects/Declaration__c/fields/Bypass_Declaration_RTF__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Declaration_RTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Declaration RTF</label>
    <type>Checkbox</type>
</CustomField>