force-app/main/default/objects/Declaration__c/fields/Declaration_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Template_Id__c</fullName>
    <label>Declaration Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>