force-app/main/default/objects/Declaration__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal</label>
    <referenceTo>Registration_History__c</referenceTo>
    <relationshipLabel>Declarations</relationshipLabel>
    <relationshipName>Renewal_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>